# hw3-clustering

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cluster/: __init__.py  centroid.py  kmeans.py  silhouette.py  utils.py
test/: Untitled.ipynb  final_test.ipynb  kmeans_vs_sklearn.ipynb  test_kmeans.py  testing_against_sklearn.ipynb  testing_code.ipynb  testing_code2.ipynb  testing_package.ipynb
tests/: final_iteration.ipynb  test_kmeans.py  test_silhouette.py
